= *Downloads* Changelog =

== Version 1.1 => Release Date: XX.03.2012 ==

* Fixed error with sprockets
* Fixed trouble with opera
* Added "Gallery Block" for recent downloads
* Updated Manual
* Updated Language constants for
** /blocks.php
** /modinfo.php

== First Release: Version 1.0 => Release Date: 04.02.2012 ==

* First final relase of Downloads Module
* Changed the way of checking permissions
* added admin/permissions.php to change permissions faster

== Unreleased: Version 1.0 RC1 => Release-Date: xx.xx.2012 ==

* First public release of the module.